<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/main_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/quiz_logo_image_view"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/logo_description"
                android:padding="10dp"
                android:src="@drawable/quiz_logo" />

            <TextView
                android:id="@+id/question_one_text_view"
                style="@style/QuestionsTheme"
                android:text="@string/question_one" />

            <EditText
                android:id="@+id/name_edit_text"
                style="@style/AnswersTheme"
                android:hint="@string/name"
                android:inputType="textCapWords" />


            <TextView
                android:id="@+id/question_two_text_view"
                style="@style/QuestionsTheme"
                android:text="@string/question_two" />

            <EditText
                android:id="@+id/release_year_edit_text"
                style="@style/AnswersTheme"
                android:digits="0123456789."
                android:hint="@string/year"
                android:inputType="numberDecimal"
                android:maxLength="4" />

            <TextView
                android:id="@+id/question_three_text_view"
                style="@style/QuestionsTheme"
                android:text="@string/question_three" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/founder_andy_checkbox"
                        style="@style/AnswersTheme"
                        android:padding="5dp"
                        android:text="@string/andy" />

                    <CheckBox
                        android:id="@+id/founder_rich_checkbox"
                        style="@style/AnswersTheme"
                        android:padding="5dp"
                        android:text="@string/rich" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/founder_nick_checkbox"
                        style="@style/AnswersTheme"
                        android:padding="5dp"
                        android:text="@string/nick" />

                    <CheckBox
                        android:id="@+id/founder_chris_checkbox"
                        style="@style/AnswersTheme"
                        android:padding="5dp"
                        android:text="@string/chris" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/question_four_text_view"
                style="@style/QuestionsTheme"
                android:text="@string/question_four" />

            <RadioGroup
                android:id="@+id/android_codename_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/codename_radio_lollipop"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/codename_radio_group_left"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/codename_radio_lollipop"
                        style="@style/AnswersTheme"
                        android:onClick="unselectRadioBtnRight"
                        android:text="@string/lollipop" />

                    <RadioButton
                        android:id="@+id/codename_radio_nougat"
                        style="@style/AnswersTheme"
                        android:onClick="unselectRadioBtnRight"
                        android:text="@string/nugat" />

                </RadioGroup>

                <RadioGroup
                    android:id="@+id/codename_radio_group_right"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/codename_radio_kitkat"
                        style="@style/AnswersTheme"
                        android:onClick="unselectRadioBtnLeft"
                        android:text="@string/kitkat" />

                    <RadioButton
                        android:id="@+id/codename_radio_cupcake"
                        style="@style/AnswersTheme"
                        android:onClick="unselectRadioBtnLeft"
                        android:text="@string/cupcake" />

                </RadioGroup>

            </RadioGroup>

            <TextView
                android:id="@+id/question_five_text_view"
                style="@style/QuestionsTheme"
                android:text="@string/question_five" />

            <RadioGroup
                android:id="@+id/android_company_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:checkedButton="@id/company_radio_microsoft">

                <RadioButton
                    android:id="@+id/company_radio_microsoft"
                    style="@style/AnswersTheme"
                    android:layout_margin="0dp"
                    android:text="@string/microsoft" />

                <RadioButton
                    android:id="@+id/company_radio_apple"
                    style="@style/AnswersTheme"
                    android:layout_margin="0dp"
                    android:text="@string/apple" />

                <RadioButton
                    android:id="@+id/company_radio_google"
                    style="@style/AnswersTheme"
                    android:layout_margin="0dp"
                    android:text="@string/google" />

                <RadioButton
                    android:id="@+id/company_radio_nvidia"
                    style="@style/AnswersTheme"
                    android:layout_margin="0dp"
                    android:text="@string/nvidia" />

            </RadioGroup>


            <Button
                android:id="@+id/submit_answers_button"
                style="@style/QuestionsTheme"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="submitQuiz"
                android:text="@string/submit"
                android:textAllCaps="true" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>